--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
   "homepage": "https://github.com/afeiship/ushell-module-tmux",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
+  },
+  "scripts": {
+    "release": "release-it"
+  },
+  "devDependencies": {
+    "release-it": "^14.2.1"
   }
 }
